deployment/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql-server
spec:
  selector:
    matchLabels:
      app: graphql-server
  template:
    metadata:
      labels:
        app: graphql-server
    spec:
      containers:
        - name: graphql-server
          image: graphql-server
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: graphql-server
spec:
  type: ClusterIP
  selector:
    app: graphql-server
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
